--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "filestack-js": "3.32.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "filestack-js": "3.32.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
+    "@types/node": "24.0.13",
+    "@types/react": "19.1.8",
     "@types/react-dom": "18.3.0",
-    "typescript": "5.5.3",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "5.8.3"
   }
 }
